# deprecated_libwebos-gui

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  webos-gui.pc.in  webos-gui.pro  webos-hybris-compositor.pro
eglplatform-offscreen/: Makefile.am  OffscreenNativeWindow.cpp  OffscreenNativeWindow.h  eglplatform_offscreen.cpp
libwebos-gui/: BufferAllocator.cpp  Makefile.am  OffscreenNativeWindowBuffer.cpp  OffscreenNativeWindowBuffer.h  WebosSurfaceManagerClient.cpp  WebosSurfaceManagerClient.h  WebosSurfaceManagerRemoteClient.cpp  WebosSurfaceManagerRemoteClient.h
src/: BufferAllocator.h  HybrisCompositor.cpp  HybrisCompositor.h  HybrisCompositorClient.cpp  HybrisCompositorClient.h  HybrisCompositorRemoteClient.cpp  HybrisCompositorRemoteClient.h  OffscreenNativeWindow.cpp  OffscreenNativeWindow.h  OffscreenNativeWindowBuffer.cpp  WebosMessages.h  WebosSurfaceManager.cpp  WebosSurfaceManager.h  WebosSurfaceManagerClient.cpp  WebosSurfaceManagerClient.h  WebosSurfaceManagerRemoteClient.cpp  WebosSurfaceManagerRemoteClient.h
