NULL =

SUBDIRS = libwebos-gui eglplatform-offscreen

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = webos-gui.pc

EXTRA_DIST = \
	MAINTAINERS \
	webos-gui.pc \
	$(NULL)

MAINTAINERCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh ltmain.sh     \
	Makefile.in missing config.h.in            \
	mkinstalldirs *~ \
	$(NULL)
